# photoeditor

./: .gitignore  .gitmodules  README.md  pyproject.toml
app/: __main__.py
app/forms/: diagram.ui
app/src/: canvas.py  diagram.py  filter.py
app/ui/: ui_diagram.py
photoeditor/: UiLayer.py  __main__.py  canvas.py  comand_line.py  diagram.py  filter_factory.py  image_preview.py
photoeditor/forms/: command_line.ui  diagram.ui  layer.ui
photoeditor/src/: diagram.py
photoeditor/ui/: ui_command_line.py  ui_diagram.py  ui_layer.py
photoeditor_base/: pyproject.toml
photoeditor_base/photoeditor/base/: filter.py  geometry.py  layer.py  selection.py
photoeditor_basic_filters/: pyproject.toml
photoeditor_basic_filters/photoeditor/basic_filters/: filter.py
photoeditor_basic_filters/photoeditor/filters/: filter.py
photoeditor_cpp/: CMakeLists.txt  pyproject.toml  setup.py
photoeditor_cpp/src/: python.cpp
photoeditor_cpp/src/include/photoeditor_cpp/: test.hpp
photoeditor_cpp/src/lib/: test.cpp
photoeditor_segmentation/: pyproject.toml
photoeditor_segmentation/photoeditor/segmentation/: SAM.py  __init__.py
