[project]
name = "photoeditor-basic-filters"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = ["photoeditor-base","opencv-python"]

[tool.setuptools.packages.find]
where = ["."]
include = ["photoeditor"]
namespaces = true


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

